# systematic-research-data-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
api/: dependencies.py  main.py  schemas.py
api/routes/: data.py  datasets.py  health.py  metadata.py
core/: models.py  registry.py
core/health/: checks.py  reporter.py
core/validation/: schema_validator.py
data/raw/: prices.csv
pipelines/: ingestion.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/ingestion/: csv_parser.rs  mod.rs  normalizer.rs
rust_core/src/schema/: canonical.rs
scripts/: demo.py  demo_failure.py
tests/: conftest.py  test_health_checks.py  test_ingestion_determinism.py
