[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "systematic-research-data-core"
version = "0.1.0"
description = "Core data integration and health monitoring platform for systematic research"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",       # for FastAPI test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "pipelines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
