[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.9"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
arrow-array = "51"
arrow-schema = "51"
arrow-cast = "51"
parquet = { version = "51", features = ["arrow"] }
chrono = "0.4"
